# Customer-Churn-Analysis-and-Prediciton

./: README.md  main.ipynb  pyproject.toml
