[tool.poetry]
name = "customer-churn-analysis-and-prediciton"
version = "0.1.0"
description = ""
authors = ["Boru <boru0713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
altair = {extras = ["all"], version = "^5.3.0"}
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
